# credproxy

./: .gitignore  CLAUDE.md  Makefile  README.md  STYLE.md  design-v1.md  design-v3.md  pyproject.toml
.github/: README.md
cli/credproxy_cli/: __init__.py
cli/credproxy_cli/builtin/: profile.toml  workspace.attach.template.toml  workspace.template.toml
cli/credproxy_cli/core/: bindings.py  compose.py  config.py  dirmatch.py  docker.py  doctor.py  errors.py  hostmatch.py  imageenv.py  injectors.py  lifecycle.py  paths.py  prereqs.py  preset_refresh.py  preset_stamp.py  presets.py  profile.py  providers.py  proxy_http.py  push.py  rules.py  runtime.py  scaffold.py  schemes.py  scriptcheck.py  scripts.py  suggest.py  workspace.py
cli/credproxy_cli/porcelain/: cli.py  cmd_binding.py  cmd_dev.py  cmd_lifecycle.py  cmd_mount.py  cmd_pack.py  cmd_postgres.py  cmd_preset.py  cmd_registry.py  cmd_rule.py  cmd_workspace.py  common.py  prompt.py  render.py
docs/: README.md  composability.md  concepts.md  configuration.md  dev-environment.md  forking.md  how-it-works.md  injectors.md  overlays.md  providers.md  rules.md  security.md  troubleshooting.md  workspace.md
docs/advanced/: composability.md  overlays.md
docs/guide/: 01-install.md  02-first-workspace.md  03-daily-workflow.md  04-first-credential.md  05-secret-managers.md  06-packs.md  06-presets.md  07-rules.md  08-going-further.md
docs/reference/: configuration.md  injectors.md  postgres.md  providers.md  rules.md  workspace.md
overlay/: README.md
overlay/50-example/: README.md  claude-settings-defaults.json  workspace.template.toml
overlay/50-example/agents/: oracle.md  sol.md
overlay/50-example/omz-custom/: profile.zsh  prompt.zsh
overlay/50-example/packs/: claude-managed-settings.toml  persist.toml
overlay/50-example/presets/: claude-managed-settings.toml  persist.toml
overlay/50-example/session-context.d/: example.sh
overlay/50-example/tests/: test_pack.py  test_preset.py  test_skill.py
overlay/50-example/tools.d/: extras.list
overlay/base/: README.md  session-context.sh  workspace.template.toml
overlay/base/injectors/: gcp-sa-jwt.toml  x-auth-token.toml
overlay/base/omz-custom/: mise.zsh
overlay/base/packs/: cache.toml  claude-code.toml  codex.toml  gcloud.toml  git-signing.toml  github-auth.toml  proxy-ca.toml  (+1 more)
overlay/claude-code/: README.md
overlay/claude-managed-settings/: README.md
overlay/claude-session-context/: README.md
overlay/claude-setup/: README.md
overlay/git-signing/: README.md
overlay/github-auth/: README.md
overlay/presets/: .gitkeep
overlay/setup-runner/: README.md  setup.sh
overlay/toolchain/: README.md
profile/: README.md  profile.example.toml
profile/injectors/: .gitkeep
profile/providers/: .gitkeep
profile/scripts/: .gitkeep
proxy/: Dockerfile  add_secret.py  addon.py  admin.py  audit.py  bootstrap.py  config.py  constants.py  constants.sh  entrypoint.sh  log.py  main.py  pg.py  pgbroker.py  placeholders.py  requirements.txt  rules.py  schemes.py  starlark_runtime.py  supervisor.sh  testkit.py
tests/: conftest.py  test_addon.py  test_admin.py  test_config.py  test_entrypoint.py  test_jwt_bearer_script.py  test_main.py  test_oauth_reseal_script.py  test_ovh_script.py  test_pg_config.py  test_pg_integration.py  test_pgbroker.py  test_reseal.py  test_rules.py  test_scripted_config.py  test_scrub_emails_script.py  test_sigv4.py  test_starlark_runtime.py  test_testkit.py
tests/cli/: conftest.py  test_architecture.py  test_atomic_write.py  test_attach.py  test_binding_guided.py  test_bindings.py  test_config.py  test_dep_sync.py  test_dev_test_overlays.py  test_dirmatch.py  test_docker_missing.py  test_docs_lint.py  test_doctor.py  test_emit_compose.py  test_enter_user.py  test_exec.py  test_help_packs.py  test_help_presets.py  test_hint_commands.py  test_injectors.py  test_json_contract.py  test_keychain_provider.py  test_lifecycle.py  test_lock.py  test_manual_bindings.py  test_new_commands.py  test_op_provider.py  test_overlay.py  test_pack_container_half.py  test_pack_host_options.py  test_pack_multislot.py  test_pack_options.py  test_pack_references.py  test_pack_refresh.py  test_pack_requires.py  test_packs.py  test_pointer.py  test_porcelain.py  test_postgres.py  test_preset_container_half.py  (+24 more)
(+111 files in other folders)
