# Dev-only project metadata. Normal CLI use needs NO installation -- the
# `bin/credproxy` / `bin/credp` shims put `cli/` on sys.path and run the stdlib
# CLI directly. This file makes the dev/test loop discoverable and uv-managed:
#   uv sync                 # create .venv with the CLI (editable) + pytest
#   uv run pytest           # host CLI tests (tests/cli)
#   uv run credproxy ...    # the CLI, via the installed console script
# The proxy is a separate deploy unit; its deps live in proxy/requirements.txt.
# `credproxy dev test` runs its suite ON-HOST when those deps import there, else
# in the image (`--container` forces the image).
[project]
name = "credproxy"
version = "0.1.0"                     # keep in sync with credproxy_cli.__version__
description = "credproxy host CLI: workspace manager for the credential-injecting egress proxy"
requires-python = ">=3.11"            # stdlib tomllib
dependencies = []                     # the CLI is standard-library only, by design

[project.scripts]
credproxy = "credproxy_cli.porcelain.cli:main"        # strict surface
credp = "credproxy_cli.porcelain.cli:main_loose"      # loose surface

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

# The package lives under cli/ rather than the default src/ layout.
[tool.uv.build-backend]
module-root = "cli"
module-name = "credproxy_cli"

[dependency-groups]
# `dev` is the CLI-suite stack: pytest ONLY, so a plain `uv sync` keeps the
# .venv stdlib-only (the CLI is stdlib-only by design, and the CLI suite runs
# against that same bare env -- a regression guard for that property). Do NOT
# add aiohttp-pulling deps (e.g. pytest-aiohttp) here.
dev = ["pytest>=8"]
# `proxy` adds the proxy + overlay suites' on-host deps, so `uv sync --group
# proxy` provisions the FULL test stack in one command. These MUST stay in
# lockstep with proxy/requirements.txt (the image's pip source -- the build
# context is proxy/, no pyproject there); tests/cli/test_dep_sync.py fails on
# drift. pytest-aiohttp lives here (not `dev`) because it pulls in aiohttp.
proxy = [
    "mitmproxy>=10.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "starlark-pyo3>=2025.2.5",
    "pytest-aiohttp>=1.0",
    {include-group = "dev"},
]

[tool.pytest.ini_options]
# `uv run pytest` (no args) runs the host CLI suite. The proxy suite (tests/) has
# its own tests/pytest.ini; `credproxy dev test` runs it on-host when the proxy
# deps import there, otherwise in the image (`--container` forces the image).
testpaths = ["tests/cli"]
